<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_set_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:background="#00000000"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="250dip"
    	android:orientation="horizontal">
        
    <ListView
        android:id="@+id/group_leaf_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" />

    <LinearLayout
        android:id="@+id/group_opeation"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        </ScrollView>

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="5dip"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:prompt="@string/group_exist" />

        <EditText
            android:id="@+id/group_name_edt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_edt_name_hint"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:singleLine="true" />

        <Button
            android:id="@+id/group_join_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/btn_selector"
            android:text="@string/group_leaf_join_txt" />
    </LinearLayout>
    
    </LinearLayout>

    <SeekBar 
        android:id="@+id/group_seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:max="100"
        android:progress="0"/>
    
</LinearLayout>