<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/short_addr_panel"
    android:layout_width="match_parent"
    android:layout_height="250dip"
    android:layout_marginTop="20dip"
    android:background="#00000000"
    android:orientation="horizontal" >

    <ListView
        android:id="@+id/leaf_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_dial"
        android:cacheColorHint="#00000000" />

    <LinearLayout
        android:id="@+id/leaf_opeation"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/leaf_name_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_selector"
                android:hint="@string/leaf_edt_name_hint"
                android:paddingLeft="35dip"
                android:singleLine="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dip"
                android:src="@drawable/leaf_name_hint" />
        </RelativeLayout>

        <Button
            android:id="@+id/leaf_name_ok_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/btn_selector"
            android:text="@string/leaf_name_btn_txt" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/leaf_addr_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:prompt="@string/leaf_address_spinner_prompt"
                android:paddingLeft="35dip"
                android:background="@drawable/spinner_selector" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dip"
                android:paddingTop="3dip"
                android:src="@drawable/leaf_address_hint" />
        </RelativeLayout>

        <Button
            android:id="@+id/leaf_set_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6dip"
            android:background="@drawable/btn_selector"
            android:text="@string/leaf_set_btn_txt" />
    </LinearLayout>

</LinearLayout>